READMEにあたりまえのこと書き忘れてた

--- a/README
+++ b/README
@@ -23,6 +23,7 @@ Data Binder for NGUI
 ってなります。
 
 # 注意事項
+* あたりまえですが、NGUIは別途必要です
 * まだまだ自分ですら使ってないし、コンポーネントも全然足りてない
 * iOSで動作するか未検証
 * 計測していないけれど、たぶん結構重い
