説明を丸投げする

--- a/README
+++ b/README
@@ -22,6 +22,9 @@ Data Binder for NGUI
 「え？いらなくなった？じゃあそのGameObject消しといてくれればいいよ。」
 ってなります。
 
+# くわしくは
+Example Sceneみてください
+
 # 注意事項
 * あたりまえですが、NGUIは別途必要です
 * まだまだ自分ですら使ってないし、コンポーネントも全然足りてない
