submoduleで使う方法を追加

--- a/README
+++ b/README
@@ -25,6 +25,7 @@ Data Binder for NGUI
 # 使い方
 * unityプロジェクトを作る
 * Assets以下に、このDataBinderForNGUIまるまるつっこむ
+** または git submodule add git@github.com:kyubuns/DataBinderForNGUI.git
 * NGUIをimportする
 * RUN
 
